# gen-sdk

./: .gitignore  AGENTS.md  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  README.md  cabal.project  docs-index.html  module.dhall  package.dhall
.github/workflows/: build.yaml  ci.yml  deploy-docs-to-pages.yaml  dhall-build.yml  dhall-deploy.yml  dhall.yml  docs.yaml  formatting.yaml  release.yml
Fixtures/: 1.dhall  package.dhall
Fixtures/Helpers/: varQueryFragment.dhall
Input/: package.dhall
Output/Compiled/: Type.dhall  alternative.dhall  applicative.dhall  default.dhall  err.dhall  flatMap.dhall  functor.dhall  map.dhall  map2.dhall  message.dhall  monad.dhall  nest.dhall  ok.dhall  or.dhall  package.dhall  report.dhall  sequenceList.dhall  toErrorYaml.dhall  toFileMap.dhall  toPlainText.dhall  toWarningsYaml.dhall  traverseList.dhall
Output/Compiled/Report/: toPlainText.dhall
Output/Compiled/Result/: Type.dhall  err.dhall  ok.dhall
Output/File/: toMapEntry.dhall  toPlainText.dhall
Output/Files/: toFileMap.dhall  toPlainText.dhall
dhall/: CodegenKit.dhall  Constructor.dhall  ContractVersion.dhall  ExampleGen.dhall  Gen.dhall  Json.dhall  JsonParser.dhall  JsonPath.dhall  Lude.dhall  ParsingError.dhall  Prelude.dhall  Project.dhall  ProjectModel.dhall  Result.dhall  Version.dhall  demo.dhall  module.dhall  package.dhall  test.dhall  types.dhall
dhall/Adapters/HasqlV1/: Gen.dhall  Sdk.dhall  design.mmd
dhall/Adapters/HasqlV1/Generate/: package.dhall
dhall/Classes/: package.dhall  test.dhall
dhall/Classes/Arbitrary/: Type.dhall  package.dhall  sample.dhall
dhall/Classes/Equality/: Type.dhall  equal.dhall  equal.test.dhall  notEqual.dhall  notEqual.test.dhall  package.dhall  test.dhall
dhall/Classes/Equality/PreludeInstances/: list.dhall  list.test.dhall  natural.dhall  natural.test.dhall  nonEmpty.dhall  nonEmpty.test.dhall  test.dhall
dhall/Classes/Order/: Comparison.dhall  ComparisonHandler.dhall  Prelude.dhall  Type.dhall  dedupAndSortList.dhall  dedupAndSortList.test.dhall  equal.dhall  equal.test.dhall  greaterThan.dhall  greaterThan.test.dhall  greaterThanEqual.dhall  greaterThanEqual.test.dhall  greaterThanOrEqual.dhall  insertIntoDedupedSortedList.dhall  insertIntoDedupedSortedList.test.dhall  lessThan.dhall  lessThan.test.dhall  lessThanEqual.dhall  lessThanEqual.test.dhall  lessThanOrEqual.dhall  notEqual.dhall  notEqual.test.dhall  package.dhall  test.dhall  toEquality.dhall  toEquality.test.dhall
dhall/Classes/Order/PreludeInstances/: list.dhall  list.test.dhall  natural.dhall  natural.test.dhall  nonEmpty.dhall  nonEmpty.test.dhall  package.dhall  test.dhall
dhall/Compiled/: Type.dhall  alternative.dhall  applicative.dhall  default.dhall  err.dhall  flatMap.dhall  functor.dhall  map.dhall  map2.dhall  message.dhall  monad.dhall  nest.dhall  ok.dhall  or.dhall  package.dhall  report.dhall  sequenceList.dhall  toErrorYaml.dhall  toFileMap.dhall  toFiles.dhall  toPlainText.dhall  toReportsText.dhall  toWarningsYaml.dhall  traverseList.dhall
dhall/Compiled/Report/: Type.dhall  message.dhall  nest.dhall  package.dhall  toPlainText.dhall
dhall/Compiled/Result/: map.dhall  package.dhall
dhall/DemoAdapter/: Config.dhall  Gen.dhall  generator.dhall
dhall/File/: package.dhall  toMapEntry.dhall  toPlainText.dhall
dhall/Files/: Type.dhall  package.dhall  toFileMap.dhall  toPlainText.dhall
dhall/Fixtures/: 1.dhall  2.dhall  AllTypes.dhall  Exhaustive.dhall  package.dhall
dhall/Fixtures/1/: names.dhall
dhall/Fixtures/Helpers/: name.dhall  package.dhall  varQueryFragment.dhall
dhall/Instances/: list.dhall
dhall/Instances/list/: arbitrary.dhall  package.dhall
dhall/Lude/: package.dhall
dhall/Lude/Natural/: div.dhall  package.dhall
dhall/Name/: Type.dhall  equality.dhall  order.dhall  package.dhall  test.dhall  toTextInCamel.dhall  toTextInCamel.test.dhall  toTextInKebab.dhall  toTextInKebab.test.dhall  toTextInPascal.dhall  toTextInPascal.test.dhall  toTextInSnake.dhall  toTextInSnake.test.dhall
dhall/Name/Number/: Classes.dhall  Type.dhall  compare.dhall  equality.dhall  order.dhall  package.dhall
dhall/Name/Number/Char/: Classes.dhall  Handler.dhall  Type.dhall  equal.dhall  equality.dhall  lessThan.dhall  order.dhall  package.dhall
dhall/Name/Segment/: Type.dhall  fromParts.dhall  package.dhall  test.dhall  toTextInLower.dhall  toTextInLower.test.dhall  toTextInUpper.dhall  toTextInUpper.test.dhall
dhall/Name/Word/: package.dhall  toTextInLower.dhall  toTextInUpper.dhall
dhall/Name/Word/Char/: equality.dhall  (+2 more)
dhall/Name/WordOrNumber/: Type.dhall  equality.dhall  order.dhall  package.dhall  toTextInLower.dhall
dhall/Name2/: package.dhall  test.dhall
dhall/Name2/Number/: toNameSegment.dhall
dhall/Name2/Word/: package.dhall
dhall/Name2/WordOrNumber/: toNameSegment.dhall  toTextInLower.dhall  toTextInUpper.dhall
dhall/Sigs/: Interpreter.dhall
dhall/StrictName/: Type.dhall  package.dhall  test.dhall  toName.dhall  toName.test.dhall  toTextInKebab.dhall  toTextInPascal.dhall  toTextInPascal.test.dhall  toTextInSnake.dhall  toTextInSnake.test.dhall
dhall/StrictName/Number/: package.dhall  toText.dhall
dhall/StrictName/Word/: toNameSegment.dhall
dhall/StrictName/WordOrNumber/: fold.dhall  package.dhall  toTextInUpper.dhall
docs/: dhall-to-haskell-compilation.md  generator-architecture.md
examples/: DhallTHExample.hs  README.md
haskell/: pgenie-gen.cabal
haskell/bundling-experiment/: Main.hs
haskell/bundling-test/: Gen.dhall  Main.hs
haskell/demo/: Main.hs
haskell/integration-test/: Gen.dhall  Main.hs
haskell/model-test/: Main.hs
pages/: index.html
src/: package.dhall
src/CustomTypes/: customTypeIsSupported.dhall  foldl.dhall  package.dhall  queryIsSupported.dhall  supportedCustomTypes.dhall  supportedCustomTypesReasoned.dhall
src/Fixtures/: Exhaustive.dhall  package.dhall
src/Output/: package.dhall  toFileMap.dhall
src/Primitive/: package.dhall  toText.dhall
src/Sigs/: Generator.dhall  Interpreter.dhall  generator.dhall  interpreter.dhall  package.dhall  template.dhall
(+13 files in other folders)
