cabal-version: 3.4
name: pgenie-gen
version: 0
synopsis: SDK
description:
homepage: https://github.com/nikita-volkov/pgenie-gen
bug-reports: https://github.com/nikita-volkov/pgenie-gen/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2025, Nikita Volkov
license: GPL-3.0-or-later
license-file: LICENSE
extra-source-files:
  integration-test/Gen.dhall

source-repository head
  type: git
  location: https://github.com/nikita-volkov/pgenie-gen

common base
  default-language: Haskell2010
  default-extensions:
    ApplicativeDo
    Arrows
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    LiberalTypeSynonyms
    MagicHash
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoFieldSelectors
    NoImplicitPrelude
    NoMonomorphismRestriction
    NumericUnderscores
    OverloadedRecordDot
    OverloadedStrings
    ParallelListComp
    PatternGuards
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UnboxedTuples
    ViewPatterns

common executable
  import: base
  ghc-options:
    -O2
    -threaded
    "-with-rtsopts=-N -I0 -qg"

common test
  import: base
  ghc-options:
    -threaded
    "-with-rtsopts=-N -I0 -qg"

library
  import: base
  hs-source-dirs: library
  exposed-modules:
    PGenieGen
    PGenieGen.Contract
    PGenieGen.Input
    PGenieGen.Output
    PGenieGen.Output.Report

  other-modules:
    PGenieGen.Dhall.Decode
    PGenieGen.Dhall.Deriving
    PGenieGen.Dhall.ExprViews
    PGenieGen.Dhall.Orphans
    PGenieGen.Dhall.Orphans.NonEmpty
    PGenieGen.Dhall.Orphans.Path
    PGenieGen.Prelude

  build-depends:
    QuickCheck,
    aeson,
    algebraic-path ^>=0.1,
    base,
    bytestring,
    containers,
    data-has,
    dhall ^>=1.42.3,
    dhall-json ^>=1.7.2,
    hashable,
    hspec,
    lawful-conversions ^>=0.3.1,
    megaparsec,
    mtl,
    prettyprinter,
    profunctors,
    quickcheck-instances,
    text,
    text-builder,
    text-builder-lawful-conversions,
    time,
    tuple,
    uuid,
    vector,
    vector-instances,
    witherable,

test-suite integration-test
  import: test
  type: exitcode-stdio-1.0
  hs-source-dirs: integration-test
  main-is: Main.hs
  other-modules:
  build-depends:
    aeson,
    containers,
    data-has,
    hashable,
    hspec >=2.11 && <3,
    lawful-conversions,
    megaparsec,
    pgenie-gen,
    profunctors,
    quickcheck-instances,
    rerebase,
    text-builder,
    text-builder-lawful-conversions,
    time,
    tuple,
    uuid,
    vector,
    vector-instances,
    witherable,

executable bundling-experiment
  import: executable
  hs-source-dirs: bundling-experiment
  main-is: Main.hs
  build-depends:
    aeson,
    containers,
    data-has,
    dhall,
    prettyprinter,
    hashable,
    hspec >=2.11 && <3,
    lawful-conversions,
    megaparsec,
    pgenie-gen,
    profunctors,
    quickcheck-instances,
    rerebase,
    text-builder,
    text-builder-lawful-conversions,
    time,
    tuple,
    uuid,
    vector,
    vector-instances,
    witherable,
