cabal-version: 3.4
name: pgenie-gen
version: 0
synopsis: SDK
description:
homepage: https://github.com/nikita-volkov/pgenie-gen
bug-reports: https://github.com/nikita-volkov/pgenie-gen/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2025, Nikita Volkov

source-repository head
  type: git
  location: https://github.com/nikita-volkov/pgenie-gen

common base
  default-language: Haskell2010
  default-extensions:
    ApplicativeDo
    Arrows
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    LiberalTypeSynonyms
    MagicHash
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoFieldSelectors
    NoImplicitPrelude
    NoMonomorphismRestriction
    NumericUnderscores
    OverloadedRecordDot
    OverloadedStrings
    ParallelListComp
    PatternGuards
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UnboxedTuples
    ViewPatterns

library
  import: base
  hs-source-dirs: library
  exposed-modules:
    PGenieGen
    PGenieGen.Contract
    PGenieGen.Fixtures.Project1
    PGenieGen.Input
    PGenieGen.Output
    PGenieGen.Output.Report

  other-modules:
    PGenieGen.Dhall.Decode
    PGenieGen.Dhall.Deriving
    PGenieGen.Dhall.Orphans
    PGenieGen.Dhall.Orphans.NonEmpty
    PGenieGen.Dhall.Orphans.Path
    PGenieGen.Input.Name
    PGenieGen.Input.Word
    PGenieGen.Input.WordChar
    PGenieGen.Input.WordOrNumber
    PGenieGen.Prelude
    PGenieGen.Prelude.Path

  build-depends:
    QuickCheck,
    aeson,
    algebraic-path ^>=0.1,
    base,
    bytestring,
    containers,
    data-has,
    dhall ^>=1.42.3,
    hashable,
    lawful-conversions ^>=0.3.1,
    mtl,
    pgenie-gen:aeson-deriver,
    prettyprinter,
    profunctors,
    quickcheck-instances,
    template-haskell,
    text,
    text-builder,
    text-builder-lawful-conversions,
    time,
    tuple,
    uuid,
    vector,
    vector-instances,
    witherable,

library aeson-deriver
  import: base
  hs-source-dirs: aeson-deriver
  exposed-modules: AesonDeriver
  build-depends:
    aeson,
    base,
    cases,
    template-haskell,
    text,
